Bug fix: Checkboxes are invisible when forced color mode is enabled
(issue #321)
- Added new smaller size checkbox for modal dialogs

--- a/wx-src/pages/new.css
+++ b/wx-src/pages/new.css
@@ -54,10 +54,6 @@ input[type="text"], textarea {
     font-size: 11px;
 }
 
-input[type="checkbox"] + label {
-    vertical-align: -0.3em
-}
-
 textarea {
     resize: none;
 }
